# soundstorm-cli

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md
.devcontainer/: devcontainer.env  devcontainer.json
.github/workflows/: release.yml
.rpm/: soundstorm-cli.spec
src/: main.rs  tui.rs
