[package]
name = "soundstorm-cli"
version = "0.1.0"
edition = "2021"
author = "Andreas Finck <andreas.finck@icloud.com>"
description = "Plays Soundstorm Internet-Radio Stream"
license = "MIT OR Apache-2.0"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
serde_json = "1.0"
toml = "0.8"
ctrlc = "3"

[package.metadata]
stream_url = "http://stream.soundstorm-radio.com:8000"
