[package]
name = "soundstorm-cli"
version = "0.1.3"
edition = "2021"
authors = ["Andreas Finck <andreas.finck@icloud.com>"]
description = """
Plays Soundstorm Internet-Radio Stream
 For me this is the only radio I need.
 Much better than what we used to have around here.
 No distraction - no noise - just music.
"""

license = "MIT OR Apache-2.0"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
serde_json = "1.0"
toml = "0.8"

